[gd_scene load_steps=4 format=3 uid="uid://cufgdt43hp4in"]

[ext_resource type="AudioStream" uid="uid://8dnuyc6ovba2" path="res://menus/audio/music/02. Main Menu.mp3" id="1_3c3dx"]
[ext_resource type="Script" path="res://menus/mainMenu/main_menu_script.gd" id="1_p4dfu"]

[sub_resource type="LabelSettings" id="LabelSettings_i8ko2"]
font_size = 80

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p4dfu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Modline Drift(?)"
label_settings = SubResource("LabelSettings_i8ko2")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SingleButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
text = "Singleplayer"

[node name="LocalButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
text = "Local Play"

[node name="Onlinebutton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
text = "Online Play"

[node name="SettingsButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_3c3dx")
volume_db = -10.852
autoplay = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/SingleButton" to="." method="_on_single_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LocalButton" to="." method="_on_local_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Onlinebutton" to="." method="_on_onlinebutton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
